--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"citty": "^0.1.5",
+		"destr": "^2.0.2",
 		"h3": "^1.10.1",
 		"nitropack": "^2.8.1",
 		"solid-js": "^1.8.12",
