--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
 		"build": "node cli.js build",
 		"start": "node cli.js start"
 	},
-	"dependencies": {
+	"devDependencies": {
+		"@types/ws": "^8.5.10",
 		"citty": "^0.1.5",
 		"destr": "^2.0.2",
-		"h3": "^1.10.1",
+		"h3": "1.10.0",
 		"nitropack": "^2.8.1",
 		"solid-js": "^1.8.12",
 		"vite": "^5.0.12",
-		"vite-plugin-solid": "^2.9.1"
+		"vite-plugin-solid": "^2.9.1",
+		"ws": "^8.16.0"
+	},
+	"dependencies": {
+		"@vinxi/listhen": "^1.5.6"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"nitropack@2.8.1": "patches/nitropack@2.8.1.patch"
+		}
 	}
 }
