--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "types": ["vite/client"],
     "noEmit": true,
     "isolatedModules": true,
-  }
+  },
+  "extends": "./.nitro/types/tsconfig.json",
 }
