simplify setup by using Nitro renderer

--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
 		"build": "node cli.js build",
 		"start": "node cli.js start"
 	},
-	"devDependencies": {
-		"@types/ws": "^8.5.11",
-		"citty": "^0.1.6",
-		"destr": "^2.0.3",
-		"fast-glob": "^3.3.2",
-		"h3": "^1.12.0",
-		"nitropack": "^2.9.7",
-		"rou3": "^0.4.0",
-		"socket.io": "^4.7.5",
-		"socket.io-client": "^4.7.5",
-		"solid-js": "^1.8.18",
-		"vite": "^5.3.3",
-		"vite-plugin-solid": "^2.10.2",
+	"dependencies": {
+		"h3": "^1.13.0",
+		"nitropack": "2.9.7",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
+		"solid-js": "^1.9.3",
 		"ws": "^8.18.0"
+	},
+	"devDependencies": {
+		"@types/ws": "^8.5.13",
+		"citty": "^0.1.6",
+		"httpxy": "^0.1.5",
+		"vite": "^6.0.5",
+		"vite-plugin-solid": "^2.11.0"
 	}
 }
