--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	},
 	"dependencies": {
 		"h3": "^1.13.0",
-		"nitropack": "2.9.7",
+		"nitropack": "^2.10.4",
 		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1",
 		"solid-js": "^1.9.3",
